fix: fix nav positioning on small screens
force nav underneath logo by setting clear property, reduce margin underneath logo on narrow screens to allow space for nav to wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,11 +285,18 @@ footer input{
     
     nav{
         float: left;
+        clear: both;
         margin: 0 0 0 20px;
     }
 
     nav li{
         margin: 0 13px 0 0;
+    }
+}
+
+@media (max-width: 360px){
+    #logo{
+        margin-bottom: 8px;
     }
 }
 
